# budget_optimization

./: .gitignore  README.md  compose.yaml  pyproject.toml
Dockerfile/: dev.Dockerfile  gurobi.sh
notebooks/: core.ipynb
src/budget_optimization/: core.py
tests/: test_core.py
tmp/: core.ipynb
